--- a/cst/index.html
+++ b/cst/index.html
@@ -19,7 +19,7 @@
     <div class="parent">
     <div class="child">
         <div class="row">
-          <div class="large-6 medium-4 small-3 small-centered columns">
+          <div class="large-6 medium-4 small-centered columns">
               <div class="text-center">
                   <img src="images/atklab.png" class="logo" alt="ATKLAB" />
               </div>
