--- a/fbl/index.html
+++ b/fbl/index.html
@@ -93,17 +93,11 @@
             console.log(response.data);
         });
 
-        FB.api({
-            method: "pages.isFan",
-            page_id: "384468045506",
-        }, function(response) {
-            console.log(response);
-            if (response) {
-                alert('You Likey');
-            } else {
-                alert('You not Likey :(');
-            }
+        FB.api('/me/likes/302560043188986', function(response) {
+            console.log(response.data);
         });
+
+
     }
     </script>
     <!--
